fixed: login page text align

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body {
 .login-container {
   min-height: 100vh;
   display: flex;
+  text-align: center;
   flex-flow: column;
   align-items: center;
   justify-content: center;
